<package format="2">
  <name>scan_to_point_cloud</name>
  <version>1.0.0</version>
  <description>
    ROS package for converting laser scans to point clouds.
  </description>
  <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
  <license>BSD</license>
  
  <url>http://github.com/ctu-vras/scan_to_point_cloud</url>
  <author>Tomas Petricek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>laser_geometry</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <nodelet plugin="${prefix}/scan_to_point_cloud_plugins.xml" />
  </export>
</package>
